src/pingball/parser/BoardFileParser.java
// Generated from /Users/dve/Documents/6.005/pingball-phase3/src/pingball/parser/BoardFile.g4 by ANTLR 4.0

package pingball.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BoardFileParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__27=1, T__26=2, T__25=3, T__24=4, T__23=5, T__22=6, T__21=7, T__20=8, 
		T__19=9, T__18=10, T__17=11, T__16=12, T__15=13, T__14=14, T__13=15, T__12=16, 
		T__11=17, T__10=18, T__9=19, T__8=20, T__7=21, T__6=22, T__5=23, T__4=24, 
		T__3=25, T__2=26, T__1=27, T__0=28, SPACE=29, EQUALS=30, COMMENT_MARKER=31, 
		NEGATIVE=32, NUMBER=33, LOWERCASE=34, UPPERCASE=35, LETTER=36, UNDERSCORE=37, 
		NEWLINE=38, BOARD=39, SQUARE_BUMPER=40, TRIANGLE_BUMPER=41, CIRCLE_BUMPER=42, 
		ABSORBER=43, BALL=44, LEFT_FLIPPER=45, RIGHT_FLIPPER=46, PORTAL=47, NAME_LABEL=48, 
		ORIENTATION_LABEL=49, X_VELOCITY_LABEL=50, Y_VELOCITY_LABEL=51, WIDTH_LABEL=52, 
		HEIGHT_LABEL=53, OTHER_BOARD_LABEL=54, OTHER_PORTAL_LABEL=55, GRAVITY_LABEL=56, 
		FRICTION1_LABEL=57, FRICTION2_LABEL=58, FIRE=59, TRIGGER=60, ACTION=61, 
		KEYUP=62, KEYDOWN=63, KEYTOK=64;
	public static final String[] tokenNames = {
		"<INVALID>", "'down'", "'shift'", "'up'", "'y'", "'?'", "'backspace'", 
		"'period'", "'ctrl'", "','", "'openbracket'", "'right'", "'space'", "'.'", 
		"'semicolon'", "'quote'", "'left'", "'backslash'", "'alt'", "'x'", "'equals'", 
		"':'", "'minus'", "'!'", "'comma'", "'meta'", "'enter'", "'closebracket'", 
		"'slash'", "SPACE", "EQUALS", "'#'", "'-'", "NUMBER", "LOWERCASE", "UPPERCASE", 
		"LETTER", "'_'", "NEWLINE", "'board '", "'squareBumper '", "'triangleBumper '", 
		"'circleBumper '", "'absorber '", "'ball '", "'leftFlipper '", "'rightFlipper '", 
		"'portal '", "'name'", "'orientation'", "'xVelocity'", "'yVelocity'", 
		"'width'", "'height'", "'otherBoard'", "'otherPortal'", "'gravity'", "'friction1'", 
		"'friction2'", "'fire'", "'trigger'", "'action'", "'keyup'", "'keydown'", 
		"'key'"
	};
	public static final int
		RULE_root = 0, RULE_otherLine = 1, RULE_boardLine = 2, RULE_boardElementLine = 3, 
		RULE_fireLine = 4, RULE_commentLine = 5, RULE_keyLine = 6, RULE_boardSpecifiers = 7, 
		RULE_gravitySpec = 8, RULE_friction1Spec = 9, RULE_friction2Spec = 10, 
		RULE_sqBumperLine = 11, RULE_trBumperLine = 12, RULE_circBumperLine = 13, 
		RULE_absorberLine = 14, RULE_portalLine = 15, RULE_leftFlipLine = 16, 
		RULE_rightFlipLine = 17, RULE_ballLine = 18, RULE_nameSpec = 19, RULE_xSpec = 20, 
		RULE_ySpec = 21, RULE_orientationSpec = 22, RULE_widthSpec = 23, RULE_heightSpec = 24, 
		RULE_otherBoardSpec = 25, RULE_otherPortalSpec = 26, RULE_xFloatSpec = 27, 
		RULE_yFloatSpec = 28, RULE_xVelSpec = 29, RULE_yVelSpec = 30, RULE_keySpec = 31, 
		RULE_triggerSpec = 32, RULE_actionSpec = 33, RULE_name = 34, RULE_antlrInt = 35, 
		RULE_antlrFloat = 36, RULE_key = 37;
	public static final String[] ruleNames = {
		"root", "otherLine", "boardLine", "boardElementLine", "fireLine", "commentLine", 
		"keyLine", "boardSpecifiers", "gravitySpec", "friction1Spec", "friction2Spec", 
		"sqBumperLine", "trBumperLine", "circBumperLine", "absorberLine", "portalLine", 
		"leftFlipLine", "rightFlipLine", "ballLine", "nameSpec", "xSpec", "ySpec", 
		"orientationSpec", "widthSpec", "heightSpec", "otherBoardSpec", "otherPortalSpec", 
		"xFloatSpec", "yFloatSpec", "xVelSpec", "yVelSpec", "keySpec", "triggerSpec", 
		"actionSpec", "name", "antlrInt", "antlrFloat", "key"
	};

	@Override
	public String getGrammarFileName() { return "BoardFile.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


	    /**
	     * Call this method to have the lexer or parser throw a RuntimeException if
	     * it encounters an error.
	     */
	    public void reportErrorsAsExceptions() {
	        addErrorListener(new ExceptionThrowingErrorListener());
	    }
	    
	    private static class ExceptionThrowingErrorListener extends BaseErrorListener {
	        @Override
	        public void syntaxError(Recognizer<?, ?> recognizer,
	                Object offendingSymbol, int line, int charPositionInLine,
	                String msg, RecognitionException e) {
	            throw new RuntimeException(msg);
	        }
	    }
	    

	public BoardFileParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public OtherLineContext otherLine(int i) {
			return getRuleContext(OtherLineContext.class,i);
		}
		public List<OtherLineContext> otherLine() {
			return getRuleContexts(OtherLineContext.class);
		}
		public BoardLineContext boardLine() {
			return getRuleContext(BoardLineContext.class,0);
		}
		public TerminalNode EOF() { return getToken(BoardFileParser.EOF, 0); }
		public CommentLineContext commentLine(int i) {
			return getRuleContext(CommentLineContext.class,i);
		}
		public List<CommentLineContext> commentLine() {
			return getRuleContexts(CommentLineContext.class);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(76); commentLine();
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(82); boardLine();
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SPACE) | (1L << COMMENT_MARKER) | (1L << SQUARE_BUMPER) | (1L << TRIANGLE_BUMPER) | (1L << CIRCLE_BUMPER) | (1L << ABSORBER) | (1L << BALL) | (1L << LEFT_FLIPPER) | (1L << RIGHT_FLIPPER) | (1L << PORTAL) | (1L << FIRE) | (1L << KEYUP) | (1L << KEYDOWN))) != 0)) {
				{
				{
				setState(83); otherLine();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OtherLineContext extends ParserRuleContext {
		public List<TerminalNode> SPACE() { return getTokens(BoardFileParser.SPACE); }
		public KeyLineContext keyLine() {
			return getRuleContext(KeyLineContext.class,0);
		}
		public FireLineContext fireLine() {
			return getRuleContext(FireLineContext.class,0);
		}
		public BoardElementLineContext boardElementLine() {
			return getRuleContext(BoardElementLineContext.class,0);
		}
		public TerminalNode SPACE(int i) {
			return getToken(BoardFileParser.SPACE, i);
		}
		public CommentLineContext commentLine() {
			return getRuleContext(CommentLineContext.class,0);
		}
		public OtherLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otherLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).enterOtherLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).exitOtherLine(this);
		}
	}

	public final OtherLineContext otherLine() throws RecognitionException {
		OtherLineContext _localctx = new OtherLineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_otherLine);
		int _la;
		try {
			setState(116);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(92);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(91); match(SPACE);
					}
				}

				setState(94); boardElementLine();
				setState(96);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(95); match(SPACE);
					}
					break;
				}
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(99);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(98); match(SPACE);
					}
				}

				setState(101); fireLine();
				setState(103);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(102); match(SPACE);
					}
					break;
				}
				}
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(105); commentLine();
				setState(107);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(106); match(SPACE);
					}
					break;
				}
				}
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(110);
				_la = _input.LA(1);
				if (_la==SPACE) {
					{
					setState(109); match(SPACE);
					}
				}

				setState(112); keyLine();
				setState(114);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(113); match(SPACE);
					}
					break;
				}
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoardLineContext extends ParserRuleContext {
		public TerminalNode BOARD() { return getToken(BoardFileParser.BOARD, 0); }
		public List<TerminalNode> SPACE() { return getTokens(BoardFileParser.SPACE); }
		public List<BoardSpecifiersContext> boardSpecifiers() {
			return getRuleContexts(BoardSpecifiersContext.class);
		}
		public NameSpecContext nameSpec() {
			return getRuleContext(NameSpecContext.class,0);
		}
		public BoardSpecifiersContext boardSpecifiers(int i) {
			return getRuleContext(BoardSpecifiersContext.class,i);
		}
		public TerminalNode SPACE(int i) {
			return getToken(BoardFileParser.SPACE, i);
		}
		public BoardLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boardLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).enterBoardLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).exitBoardLine(this);
		}
	}

	public final BoardLineContext boardLine() throws RecognitionException {
		BoardLineContext _localctx = new BoardLineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_boardLine);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(118); match(SPACE);
				}
			}

			setState(121); match(BOARD);
			setState(122); nameSpec();
			setState(126);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(123); match(SPACE);
					}
					} 
				}
				setState(128);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GRAVITY_LABEL) | (1L << FRICTION1_LABEL) | (1L << FRICTION2_LABEL))) != 0)) {
				{
				{
				setState(129); boardSpecifiers();
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				while ( _alt!=2 && _alt!=-1 ) {
					if ( _alt==1 ) {
						{
						{
						setState(130); match(SPACE);
						}
						} 
					}
					setState(135);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
				}
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoardElementLineContext extends ParserRuleContext {
		public SqBumperLineContext sqBumperLine() {
			return getRuleContext(SqBumperLineContext.class,0);
		}
		public BallLineContext ballLine() {
			return getRuleContext(BallLineContext.class,0);
		}
		public PortalLineContext portalLine() {
			return getRuleContext(PortalLineContext.class,0);
		}
		public LeftFlipLineContext leftFlipLine() {
			return getRuleContext(LeftFlipLineContext.class,0);
		}
		public AbsorberLineContext absorberLine() {
			return getRuleContext(AbsorberLineContext.class,0);
		}
		public CircBumperLineContext circBumperLine() {
			return getRuleContext(CircBumperLineContext.class,0);
		}
		public RightFlipLineContext rightFlipLine() {
			return getRuleContext(RightFlipLineContext.class,0);
		}
		public TrBumperLineContext trBumperLine() {
			return getRuleContext(TrBumperLineContext.class,0);
		}
		public BoardElementLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boardElementLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).enterBoardElementLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).exitBoardElementLine(this);
		}
	}

	public final BoardElementLineContext boardElementLine() throws RecognitionException {
		BoardElementLineContext _localctx = new BoardElementLineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_boardElementLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			switch (_input.LA(1)) {
			case BALL:
				{
				setState(141); ballLine();
				}
				break;
			case SQUARE_BUMPER:
				{
				setState(142); sqBumperLine();
				}
				break;
			case TRIANGLE_BUMPER:
				{
				setState(143); trBumperLine();
				}
				break;
			case CIRCLE_BUMPER:
				{
				setState(144); circBumperLine();
				}
				break;
			case ABSORBER:
				{
				setState(145); absorberLine();
				}
				break;
			case PORTAL:
				{
				setState(146); portalLine();
				}
				break;
			case LEFT_FLIPPER:
				{
				setState(147); leftFlipLine();
				}
				break;
			case RIGHT_FLIPPER:
				{
				setState(148); rightFlipLine();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FireLineContext extends ParserRuleContext {
		public List<TerminalNode> SPACE() { return getTokens(BoardFileParser.SPACE); }
		public ActionSpecContext actionSpec() {
			return getRuleContext(ActionSpecContext.class,0);
		}
		public TerminalNode FIRE() { return getToken(BoardFileParser.FIRE, 0); }
		public TriggerSpecContext triggerSpec() {
			return getRuleContext(TriggerSpecContext.class,0);
		}
		public TerminalNode SPACE(int i) {
			return getToken(BoardFileParser.SPACE, i);
		}
		public FireLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fireLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).enterFireLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).exitFireLine(this);
		}
	}

	public final FireLineContext fireLine() throws RecognitionException {
		FireLineContext _localctx = new FireLineContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fireLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151); match(FIRE);
			setState(153); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(152); match(SPACE);
				}
				}
				setState(155); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SPACE );
			setState(157); triggerSpec();
			setState(159); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(158); match(SPACE);
				}
				}
				setState(161); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SPACE );
			setState(163); actionSpec();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentLineContext extends ParserRuleContext {
		public TerminalNode COMMENT_MARKER() { return getToken(BoardFileParser.COMMENT_MARKER, 0); }
		public TerminalNode SPACE() { return getToken(BoardFileParser.SPACE, 0); }
		public CommentLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commentLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).enterCommentLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).exitCommentLine(this);
		}
	}

	public final CommentLineContext commentLine() throws RecognitionException {
		CommentLineContext _localctx = new CommentLineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_commentLine);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			_la = _input.LA(1);
			if (_la==SPACE) {
				{
				setState(165); match(SPACE);
				}
			}

			setState(168); match(COMMENT_MARKER);
			setState(179);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			while ( _alt!=1 && _alt!=-1 ) {
				if ( _alt==1+1 ) {
					{
					setState(177);
					switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
					case 1:
						{
						setState(169);
						matchWildcard();
						}
						break;

					case 2:
						{
						setState(170); match(9);
						}
						break;

					case 3:
						{
						setState(171); match(23);
						}
						break;

					case 4:
						{
						setState(172); match(5);
						}
						break;

					case 5:
						{
						setState(173); match(21);
						}
						break;

					case 6:
						{
						setState(174); match(13);
						}
						break;

					case 7:
						{
						setState(175); match(4);
						}
						break;

					case 8:
						{
						setState(176); match(19);
						}
						break;
					}
					} 
				}
				setState(181);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeyLineContext extends ParserRuleContext {
		public List<TerminalNode> SPACE() { return getTokens(BoardFileParser.SPACE); }
		public ActionSpecContext actionSpec() {
			return getRuleContext(ActionSpecContext.class,0);
		}
		public TerminalNode KEYDOWN() { return getToken(BoardFileParser.KEYDOWN, 0); }
		public TerminalNode KEYUP() { return getToken(BoardFileParser.KEYUP, 0); }
		public TerminalNode SPACE(int i) {
			return getToken(BoardFileParser.SPACE, i);
		}
		public KeySpecContext keySpec() {
			return getRuleContext(KeySpecContext.class,0);
		}
		public KeyLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_keyLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).enterKeyLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).exitKeyLine(this);
		}
	}

	public final KeyLineContext keyLine() throws RecognitionException {
		KeyLineContext _localctx = new KeyLineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_keyLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			_la = _input.LA(1);
			if ( !(_la==KEYUP || _la==KEYDOWN) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(183); match(SPACE);
			setState(184); keySpec();
			setState(185); match(SPACE);
			setState(186); actionSpec();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoardSpecifiersContext extends ParserRuleContext {
		public Friction2SpecContext friction2Spec() {
			return getRuleContext(Friction2SpecContext.class,0);
		}
		public Friction1SpecContext friction1Spec() {
			return getRuleContext(Friction1SpecContext.class,0);
		}
		public GravitySpecContext gravitySpec() {
			return getRuleContext(GravitySpecContext.class,0);
		}
		public BoardSpecifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boardSpecifiers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).enterBoardSpecifiers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).exitBoardSpecifiers(this);
		}
	}

	public final BoardSpecifiersContext boardSpecifiers() throws RecognitionException {
		BoardSpecifiersContext _localctx = new BoardSpecifiersContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_boardSpecifiers);
		try {
			setState(191);
			switch (_input.LA(1)) {
			case GRAVITY_LABEL:
				enterOuterAlt(_localctx, 1);
				{
				setState(188); gravitySpec();
				}
				break;
			case FRICTION1_LABEL:
				enterOuterAlt(_localctx, 2);
				{
				setState(189); friction1Spec();
				}
				break;
			case FRICTION2_LABEL:
				enterOuterAlt(_localctx, 3);
				{
				setState(190); friction2Spec();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GravitySpecContext extends ParserRuleContext {
		public TerminalNode EQUALS() { return getToken(BoardFileParser.EQUALS, 0); }
		public TerminalNode GRAVITY_LABEL() { return getToken(BoardFileParser.GRAVITY_LABEL, 0); }
		public AntlrFloatContext antlrFloat() {
			return getRuleContext(AntlrFloatContext.class,0);
		}
		public GravitySpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gravitySpec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).enterGravitySpec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BoardFileListener ) ((BoardFileListener)listener).exitGravitySpec(this);
		}
	}

	public final GravitySpecContext gravitySpec() throws RecognitionException {
		GravitySpecContext _localctx = new GravitySpecContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_gravitySpec);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193); match(GRAVITY_LABEL);
			setState(194); match(EQUALS);
			setState(195); antlrFloat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
